2/22/12 change detector to 2 decimal places, to match data in spreadsheet
2/22/12 change to vertical layout of "Light View" radio buttons, so there's more room to move the detector probe between the light and cuvette
2/22/12 make AT detector show "-" when light is off
2/22/12 check in JC's latest spreadsheet
2/22/12 fix %T model
2/21/12 add "%" after %T value in AT detector
2/21/12 move duplicate code for particle nodes into a base class
2/21/12 doc and minor tweaks for potential code review of Concentration sim
2/21/12 create implementation-notes.txt and add notes for Concentration tab
2/21/12 create model.txt and write description for Concentration tab
2/21/12 first pass at %T model (but something isn't right)
2/21/12 wire up %T property (value not correctly computed yet)
2/21/12 first pass at integrating absorbance model (detector always shows absorbance, no matter where it's placed)
2/21/12 check in JC's latest measured data for molar absorption
2/21/12 add max molar absorption to BeersLawSolution (looked these up in JC's spreadsheet)
2/21/12 change request: use RGB=[255,0,255] for max color of KMnO4 (this was min color in 1st tab)
2/21/12 make all view classes package private, except canvas
2/21/12 move button classes to proper packages
2/21/12 specify a color range for the concentration range in Beer's solutions
2/21/12 move Solute to concentration.model package
2/21/12 remove Solute from Beer's model, too much baggage that's specific to Concentration model, and too many differences
2/21/12 snap cuvette width to the closest 0.1cm interval when the user stops dragging
2/21/12 remove "pure water" from Beer's Law tab, it creates problems, and all solutions are pure water when concentration=0 [61532]
2/21/12 reduce cuvette height by 0.25 cm so that it's easier to drag detector probe around bottom of cuvette
2/21/12 add height to ruler model
2/21/12 design decision: don't change appear of arrow at min/max range of cuvette width